@@ -1,3 +1,7 @@
+2004-10-22	blytkerchan
+	* dirname.c: new file
+	* dirname.h: ditto
+
 2004-07-23	blytkerchan
 	* binary.c: move here from libcontain
 	* binary.h: ditto
